--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <body>
     <main>
-      <img src="./images/illustration-hero.svg" alt="musicheroimg" />
+      <img class="heroimg" src="./images/illustration-hero.svg" alt="musicheroimg" />
       <h3>Order Summary</h3>
       <p class="bodytxt">
         You can now listen to millions of songs, audiobooks, and podcasts on any
@@ -33,7 +33,7 @@
       </p>
 
       <div class="subscriptionplan">
-        <img src="./images/icon-music.svg" alt="music-icon" />
+        <img class="musicicon" src="./images/icon-music.svg" alt="music-icon" />
         <div class="annual">
           <h4>Annual Plan</h4>
           <p>$59.99/year</p>
@@ -42,14 +42,16 @@
       </div>
 
       <button type="submit">Proceed to Payment</button>
-      <p>Cancel Order</p>
+      <p class="cancel">Cancel Order</p>
+ </main>
 
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Paul_Anny</a>.
-      </div>
-    </main>
+ <footer>
+ <div class="attribution">
+  Challenge by
+  <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+    >Frontend Mentor</a
+  >. Coded by <a href="#">Paul_Anny</a>.
+</div>
+</footer>
   </body>
 </html>
